Setting up to being adding another Tab to TabController

--- a/Coordinator Test/Coordinator Test/Base.lproj/Main.storyboard
+++ b/Coordinator Test/Coordinator Test/Base.lproj/Main.storyboard
@@ -59,6 +59,21 @@
             <point key="canvasLocation" x="1712" y="16"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="9Uo-24-vF3">
+            <objects>
+                <viewController id="zq1-nY-99q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wmt-s6-sMx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.27925307040000003" green="0.99050895250000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="lUH-qU-0h3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Xi-A6-3lE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2483" y="4"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Coordinator_Test" customModuleProvider="target" sceneMemberID="viewController">
