--- a/Coordinator Test/Coordinator Test/Base.lproj/Main.storyboard
+++ b/Coordinator Test/Coordinator Test/Base.lproj/Main.storyboard
@@ -58,10 +58,10 @@
             </objects>
             <point key="canvasLocation" x="1712" y="16"/>
         </scene>
-        <!--View Controller-->
+        <!--Second Controller-->
         <scene sceneID="9Uo-24-vF3">
             <objects>
-                <viewController id="zq1-nY-99q" sceneMemberID="viewController">
+                <viewController id="zq1-nY-99q" customClass="SecondController" customModule="Coordinator_Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wmt-s6-sMx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
